; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_enable_coalescing.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_enable_coalescing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahd_softc = type { i32 }

@ENINT_COALESCE = common dso_local global i32 0, align 4
@HS_MAILBOX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ahd_softc*, i32)* @ahd_enable_coalescing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ahd_enable_coalescing(%struct.ahd_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.ahd_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.ahd_softc* %0, %struct.ahd_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @ENINT_COALESCE, align 4
  %6 = xor i32 %5, -1
  %7 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %8 = getelementptr inbounds %struct.ahd_softc, %struct.ahd_softc* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = and i32 %9, %6
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load i32, i32* @ENINT_COALESCE, align 4
  %15 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %16 = getelementptr inbounds %struct.ahd_softc, %struct.ahd_softc* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = or i32 %17, %14
  store i32 %18, i32* %16, align 4
  br label %19

19:                                               ; preds = %13, %2
  %20 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %21 = load i32, i32* @HS_MAILBOX, align 4
  %22 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %23 = getelementptr inbounds %struct.ahd_softc, %struct.ahd_softc* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @ahd_outb(%struct.ahd_softc* %20, i32 %21, i32 %24)
  %26 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %27 = call i32 @ahd_flush_device_writes(%struct.ahd_softc* %26)
  %28 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %29 = call i32 @ahd_run_qoutfifo(%struct.ahd_softc* %28)
  ret void
}

declare dso_local i32 @ahd_outb(%struct.ahd_softc*, i32, i32) #1

declare dso_local i32 @ahd_flush_device_writes(%struct.ahd_softc*) #1

declare dso_local i32 @ahd_run_qoutfifo(%struct.ahd_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
